# lettuce-events

./: README.md  project.yaml  pyproject.toml  simple_dispatcher.py  webhook.py
broker/: rabbitmq.yml
broker/config/: definitions.json  rabbitmq.conf
lettuce/: __init__.py
tests/: tests.http
workers/: auth_worker.py  billing_worker.py  crm_worker.py  logs_payment_worker.py  register_payment_worker.py
