[tool.poetry]
name = "lettuce"
version = "0.1.0"
description = ""
authors = ["Davi Guides <dguides@payfare.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
ipykernel = "^6.29.5"
autopep8 = "^2.3.2"
ipdb = "^0.13.13"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
